SUKU firstIssue number added

--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,8 @@
     <div id="content">
       <p>Card number prefix (optional)</p>
       <input type="text" id="prefix"></input>
+      <p>First card number</p>
+      <input type="number" id="firstIssue"></input>
       <button id="save" class="mod-primary">Save</button>
     </div>
     <script src="./js/settings.js"></script>
