SUKU initial commit for order-helper

--- a/settings.html
+++ b/settings.html
@@ -5,10 +5,8 @@
   </head>
   <body>
     <div id="content">
-      <p>Card number prefix (optional)</p>
-      <input type="text" id="prefix"></input>
-      <p>First card number</p>
-      <input type="number" id="firstIssue"></input>
+      <p>List of products to count (JSON array)</p>
+      <input type="text" id="productList"></input>
       <button id="save" class="mod-primary">Save</button>
     </div>
     <script src="./js/settings.js"></script>
